bug# 46927: fix for backend adresses too: make bad port spec and duplicate address fail